# rag_snip

./: LICENSE  README.md  clean_cache.sh  cli.py  main.py  makefile  pyproject.toml
configs/: snip.yaml
core/: config.py  embeddings.py  llm.py  prompts.py  vectorstore.py
eval/: questions.yaml  run_eval.py
ingest/: parser.py  postprocess.py  to_documents.py
pipeline/: build_store.py  qa.py
rag/: hybrid.py  qa.py  rerank.py  rewrite.py  test_qa.py
vectorstore/: build_store.py  test_retriever.py
