[project]
name = "rag-snip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "pdfplumber>=0.11.9",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
